--- a/admin/templates/admin_maintenance_resume_system.html
+++ b/admin/templates/admin_maintenance_resume_system.html
@@ -258,7 +258,7 @@
 {% endblock %}
 
 {% block extra_js %}
-<script>
+<script nonce="{{ g.csp_nonce if g.csp_nonce else '' }}">
     console.log('=== RESUME SYSTEM JAVASCRIPT LOADING ===');
     console.log('Script block started');
 
