--- a/admin/templates/components/admin_navigation.html
+++ b/admin/templates/components/admin_navigation.html
@@ -182,7 +182,7 @@
     </div>
 </nav>
 
-<style>
+<style nonce="{{ g.csp_nonce if g.csp_nonce else '' }}">
 .admin-navigation {
     background: #f8f9fa;
     border-right: 1px solid #dee2e6;
@@ -369,7 +369,7 @@
 }
 </style>
 
-<script>
+<script nonce="{{ g.csp_nonce if g.csp_nonce else '' }}">
 function clearPlatformContext() {
     fetch('/api/clear_platform_context', {
         method: 'POST',
