--- a/admin/templates/maintenance_mode_dashboard.html
+++ b/admin/templates/maintenance_mode_dashboard.html
@@ -329,7 +329,7 @@
 {% endblock %}
 
 {% block extra_js %}
-<script>
+<script nonce="{{ g.csp_nonce if g.csp_nonce else '' }}">
 // Global variables
 let maintenanceStatusInterval;
 let isFormVisible = false;
