--- a/admin/templates/maintenance_monitoring_dashboard.html
+++ b/admin/templates/maintenance_monitoring_dashboard.html
@@ -390,7 +390,7 @@
 {% endblock %}
 
 {% block extra_js %}
-<script>
+<script nonce="{{ g.csp_nonce if g.csp_nonce else '' }}">
 // Global variables
 let autoRefreshInterval;
 let isAutoRefreshActive = false;
