--- a/admin/templates/security_audit_logs.html
+++ b/admin/templates/security_audit_logs.html
@@ -280,7 +280,7 @@
     </div>
 </div>
 
-<script>
+<script nonce="{{ g.csp_nonce if g.csp_nonce else '' }}">
 function showEventDetails(eventId) {
     // Show modal
     const modal = new bootstrap.Modal(document.getElementById('eventDetailsModal'));
