--- a/admin/templates/websocket_diagnostic.html
+++ b/admin/templates/websocket_diagnostic.html
@@ -96,7 +96,7 @@
     </div>
 </div>
 
-<script>
+<script nonce="{{ g.csp_nonce if g.csp_nonce else '' }}">
 let socket = null;
 let eventCount = 0;
 
