--- a/templates/review.html
+++ b/templates/review.html
@@ -70,7 +70,7 @@
         <div class="card h-100">
             <!-- Platform indicator badge -->
             <div class="position-relative">
-                <img src="{{ url_for('serve_image', filename=image.local_path.split('/')[-1]) }}" 
+                <img src="{{ url_for('static.serve_image', filename=image.local_path.split('/')[-1]) }}" 
                      class="card-img-top image-preview" 
                      alt="Image {{ image.id }}">
                 <div class="position-absolute top-0 end-0 m-2">
