--- a/templates/components/admin_navigation.html
+++ b/templates/components/admin_navigation.html
@@ -144,7 +144,7 @@
                         {{ current_user.username }}
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="adminUserDropdown">
-                        <li><a class="dropdown-item" href="{{ url_for('profile') }}">
+                        <li><a class="dropdown-item" href="{{ url_for('auth.user_management.profile') }}">
                             <i class="fas fa-user"></i> Profile
                         </a></li>
                         <li><a class="dropdown-item" href="{{ url_for('admin.admin_settings') }}">
